--- a/Elecciones Generales 2026_files/main.css
+++ b/Elecciones Generales 2026_files/main.css
@@ -321,7 +321,7 @@ table td {
   position: relative;
 }
 .site-header .style1 {
-  background-color: #003770;
+  background-color: #AC1917;
 }
 .site-header .style1 .trigger {
   display: flex;
