--- a/Elecciones Generales 2026_files/main.css
+++ b/Elecciones Generales 2026_files/main.css
@@ -465,7 +465,7 @@ table td {
     top: 0;
     left: 0;
     right: 0;
-    background: #0073CF;
+    background: #A6A6A6;
     padding: 8px 32px;
     display: flex;
     justify-content: center;
